# AP1-3---Knn-server-client

./: CMakeLists.txt  README.md  clientMain.cpp  testClassifier.cpp  testClient.cpp  testClientCopy.cpp
classification/: ChebyshevDistance.h  Classifiable.cpp  Classifiable.h  Classifier.h  DistanceCalculator.h  EuclideanDistance.h  IClassifier.h  Iris.cpp  Iris.h  Iris_test.csv  Iris_train.csv  KnnClassifier.cpp  KnnClassifier.h  LineToClassifiableConverter.cpp  LineToClassifiableConverter.h  ManhattenDistance.h  Reader.cpp  Reader.h
classification/dist_strategies/: ChebyshevDistance.h  DistCalcFactory.cpp  DistCalcFactory.h  DistanceCalculator.h  EuclideanDistance.cpp  EuclideanDistance.h  ManhattenDistance.h
commands/: ClassifyCmd.cpp  ClassifyCmd.h  ConfusionMatrixCmd.cpp  ConfusionMatrixCmd.h  ICommand.h  PrintResultsCmd.cpp  PrintResultsCmd.h  UpdateSettingsCmd.cpp  UpdateSettingsCmd.h  UploadCmd.cpp  UploadCmd.h  WriteResultsCmd.cpp  WriteResultsCmd.h
io/: DefaultIO.h  SocketIO.cpp  SocketIO.h  StandardIO.h  StandardIo.cpp
server/: CLI.cpp  CLI.h  ClassifyingServerCH.cpp  ClassifyingServerCH.h  IClientHandler.h  StandardInOutCLI.cpp  StandardInOutCLI.h  serverMain.cpp
server/classification/: Classifiable.cpp  Classifiable.h  IClassifier.h  KnnClassifier.cpp  KnnClassifier.h  LineToClassifiableConverter.cpp  Reader.cpp  Reader.h
server/classification/dist_strategies/: ChebyshevDistance.cpp  ChebyshevDistance.h  DistCalcFactory.cpp  DistanceCalculator.h  EuclideanDistance.h  ManhattenDistance.cpp
server/cli/: CLI.cpp  CLI.h
server/cli/commands/: ClassifyCmd.cpp  ClassifyCmd.h  ConfusionMatrixCmd.cpp  ConfusionMatrixCmd.h  DownloadCmd.cpp  DownloadCmd.h  ICommand.h  UpdateSettingsCmd.cpp  UpdateSettingsCmd.h  UploadCmd.cpp  UploadCmd.h  WriteResultsCmd.cpp  WriteResultsCmd.h
sockets/: TcpServerSocket.cpp  TcpServerSocket.h  TcpSocket.cpp  TcpSocket.h
